syntax = "proto3";
option go_package = "./;pc";

service CloudForEdge{
  rpc AddEdge (AddEdgeRequest) returns (AddEdgeResponse) {}
  rpc SendFrame (EdgeSendFrameRequest) returns (EdgeSendFrameResponse) {}
}

message AddEdgeRequest {
  string address = 1;
  int64 edge = 2;
  repeated SourceInfo sources = 3;
}

message SourceInfo{
  int64 id = 1;
  int64 original_framerate = 2;
}

message AddEdgeResponse {}

message EdgeSendFrameRequest {
  int64 edge = 1;
  int64 source = 2;
  int64 index = 3;
  bytes content = 4;
}

message EdgeSendFrameResponse {}
