syntax = "proto3";
option go_package = "./;ps";

service SourceForEdge {
  rpc SetFramerate (SetFramerateRequest) returns (SetFramerateResponse) {}
}

message SetFramerateRequest {
  int64 frame_rate = 1;
}

message SetFramerateResponse {}
