syntax = "proto3";
option go_package = "./;pt";

service TrainerForCloud {
  rpc SendFrame (CloudSendFrameRequest) returns (CloudSendFrameResponse) {}
}

message CloudSendFrameRequest {
  int64 edge = 1;
  int64 source = 2;
  int64 index = 3;
  string dataset = 4;
  bytes content = 5;
  bytes annotation = 6;
}

message CloudSendFrameResponse {}